# og-battle-engine

./: BattleEngine.c  BattleEngine.php  BattleEngine.py  CMakeLists.txt  OG.php  OG.py  README.md  example-battle.php  example-battle.py  example-simulator.php  example-simulator.py  example.php  example.py
.github/workflows/: ci.yml  release.yml
